[gd_scene load_steps=2 format=3 uid="uid://baos2uuxrighd"]

[ext_resource type="Script" uid="uid://d0vcgka2qqb64" path="res://Scenes/Play/QuestUI.gd" id="1_q8ks9"]

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 475.0
offset_top = 571.0
offset_right = 475.0
offset_bottom = 571.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8ks9")

[node name="QuestPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -837.0
offset_right = -168.0
offset_bottom = -337.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestContent" type="VBoxContainer" parent="QuestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 64.0
offset_right = 5.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="QuestPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 0
text = "X"
